add worker selector for read and write operations