@@ -9,10 +9,8 @@ import org.injector.tools.proxy.LocalProxy;
 import org.injector.tools.ssh.jsch.JschSSHClient;
 import org.injector.tools.ssh.trilead.SSHForwardClient;
 
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
 
@@ -21,7 +19,6 @@ public class InjectionTools {
 
     private final Config config;
     private final ExecutorService executor;
-    private Future<?> mainFuture;
 
     private SSHForwardClient ssh;
     private LocalProxy localProxy;
@@ -29,7 +26,7 @@ public class InjectionTools {
 
     public InjectionTools(Config config) {
         this.config = config;
-        executor = Executors.newFixedThreadPool(6);
+        executor = Executors.newVirtualThreadPerTaskExecutor();
     }
 
     public void startLocalProxyService() {
@@ -63,15 +60,6 @@ public class InjectionTools {
         }
     }
 
-    public void joinLocalProxyThread() throws InterruptedException {
-        this.localProxy.joinThread();
-    }
-
-    public void joinJschSSHThread() throws InterruptedException, ExecutionException {
-        if (this.mainFuture == null) return;
-        this.mainFuture.get();
-    }
-
     public void startJschSSHService() {
         startJschSSHService(config.getSshConfig());
     }
@@ -89,7 +77,7 @@ public class InjectionTools {
         Supplier<Boolean> keepRetry = (maxRetry.get() <= 0)
                 ? () -> Boolean.TRUE
                 : () -> maxRetry.get() > 0;
-        mainFuture = executor.submit(() -> {
+        executor.submit(() -> {
             log.info("ssh max retry is {}", maxRetry.get());
             while (keepRetry.get()) {
                 try {
